--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -49,7 +49,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 119,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "40f1f667-f452-40f9-85e3-942d382870e2",
+        "outputId": "86c648d7-c9d7-43c1-bc5a-a9e081c015e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -75,7 +75,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 120,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 121,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -122,165 +122,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1xHeUpIU59aN",
-        "outputId": "d2a9083b-6352-4c13-f6a3-beed8b128a63",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 282
-        }
+        "id": "1xHeUpIU59aN"
       },
       "source": [
-        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "'''from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
         "from sklearn.compose import ColumnTransformer\n",
         "labelencoder  = LabelEncoder()\n",
         "labelencoder  = LabelEncoder()\n",
         "x[:,1] = labelencoder.fit_transform(x[:,1])\n",
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[1])],remainder='passthrough')\n",
-        "x= np.array(ct.fit_transform(x),dtype=np.integer)"
+        "x= np.array(ct.fit_transform(x),dtype=np.integer)'''"
       ],
-      "execution_count": 123,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'csr_matrix'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-123-9da2c2a4d2df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabelencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColumnTransformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'one_hot_encoder'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mOneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'auto'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mremainder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'passthrough'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nmeZH3I84EtO",
-        "outputId": "b7faca12-2048-4b6a-e3cb-6954b16c970e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        }
+        "id": "nmeZH3I84EtO"
       },
       "source": [
         "pd.DataFrame(x)"
       ],
-      "execution_count": 112,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>77</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>78</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>79</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>80</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>81</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>82 rows × 2 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "         0  1\n",
-              "0   201908  5\n",
-              "1   201908  2\n",
-              "2   201908  4\n",
-              "3   201908  3\n",
-              "4   201908  0\n",
-              "..     ... ..\n",
-              "77  202008  0\n",
-              "78  202008  6\n",
-              "79  202008  1\n",
-              "80  202008  5\n",
-              "81  202008  3\n",
-              "\n",
-              "[82 rows x 2 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 112
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -297,7 +162,7 @@
         "id": "gxuG7JnEBdBU"
       },
       "source": [
-        "x = x[:,1:]"
+        "'''x = x[:,1:]'''"
       ],
       "execution_count": null,
       "outputs": []
