--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -49,7 +49,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 129,
+      "execution_count": 139,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "86c648d7-c9d7-43c1-bc5a-a9e081c015e4",
+        "outputId": "760c289e-2c6a-41d4-c89d-c5be08842dc7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -75,7 +75,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 130,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,9 +94,10 @@
       "source": [
         "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_ANTIGUEDAD.txt',delimiter='~')\n",
         "x = data1.iloc [:,:-1].values\n",
+        "x = np.array(x)\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 131,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -105,7 +106,18 @@
         "id": "4zakNkcb222f"
       },
       "source": [
-        "pd.DataFrame(x)"
+        "x"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SjBMsScDnRjl"
+      },
+      "source": [
+        "y"
       ],
       "execution_count": null,
       "outputs": []
